--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="container">
       <header class="main-header">
         <h1 class="main-title">CastlevaniaDex</h1>
-        <img src="assets/heart.gif" alt="Heart Icon" class="heart-icon" />
+        <img src="assets/heart.jpg" alt="Heart Icon" class="heart-icon" />
       </header>
 
       <section class="search-section">
