--- a/bestiary.html
+++ b/bestiary.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CastlevaniaDex</title>
+    <title>Bestiary - CastlevaniaDex</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@300;400;700&display=swap"
@@ -22,8 +22,8 @@
           <span>CastlevaniaDex</span>
         </div>
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="bestiary.html">Browse All</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="bestiary.html" class="active">Browse All</a></li>
         </ul>
         <button id="menuToggle" class="menu-toggle" aria-label="Toggle Menu">
           <span class="hamburger-box">
@@ -34,37 +34,12 @@
     </nav>
     <main class="container">
       <header class="main-header">
-        <h1 class="main-title">CastlevaniaDex</h1>
+        <h1 class="main-title">Complete Bestiary</h1>
         <img src="assets/heart.jpg" alt="Heart Icon" class="heart-icon" />
       </header>
 
-      <section class="search-section">
-        <div class="search-container">
-          <input
-            type="text"
-            id="searchInput"
-            placeholder="Search by Name or ID (e.g. 1, Dracula)..."
-            autocomplete="off"
-          />
-          <button id="searchButton" class="search-btn">Search</button>
-        </div>
-      </section>
-
-      <section id="resultsContainer" class="results-container">
-        <div class="placeholder-message">
-          <p>Search for a beast from the castle...</p>
-        </div>
-      </section>
-
-      <section class="inactive-sections">
-        <div class="coming-soon-card">
-          <h2>Armas</h2>
-          <div class="coming-soon-badge">Coming Soon</div>
-        </div>
-        <div class="coming-soon-card">
-          <h2>Objetos</h2>
-          <div class="coming-soon-badge">Coming Soon</div>
-        </div>
+      <section id="bestiaryGrid" class="bestiary-grid">
+        <!-- Grid items will be injected here by JS -->
       </section>
     </main>
 
@@ -76,6 +51,6 @@
       <a href="mailto:contact@example.com" class="contact-link">Contact Me</a>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="bestiary_grid.js"></script>
   </body>
 </html>
